# Google-HashCode-2020

./: .gitignore  pavle.txt
Practice Problem/: Practice Problem.cpp
main_cpp/: CMakeLists.txt  book_placement.h  dp.cpp  input.h  main_cpp.depend  output.h  output_sol_with_lib_ordering.py  score_calc.h  sol.cpp  stats.py  visulize.py
